--- a/client/src/styles/Main.css
+++ b/client/src/styles/Main.css
@@ -1,13 +1,39 @@
 :root {
     --main-green: #1db954;
     --main-green-hover: #1ED760;
+    --main-dark-grey: #181818;
+    --main-text-color: #FFFFFF;
+}
 
+#main-container {
+    font-family: 'Montserrat', sans-serif;
+    width: 100vw;
+    height: 100vh;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--main-dark-grey);
+}
+
+#intro {
+    font-weight: 800;
+    font-size: 25px;
+    color: var(--main-text-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#intro p {
+    margin: 5px;
 }
 
 #login-button {
-    color: white;
+    color: var(--main-text-color);
     background-color: var(--main-green);
-    margin: 20px 0 70px;
+    margin: 70px 20px;
     padding: 17px 35px;
     border-radius: 30px;
     text-decoration: none;
