--- a/client/src/styles/Mood.css
+++ b/client/src/styles/Mood.css
@@ -1,12 +1,13 @@
 :root {
     --main-pink: #EFD2d2;
-    --main-grey: #909090;
+    --main-green: #1db954;
+    --main-green-hover: #1ED760;
 }
 
 #mood-container {
     background: var(--main-pink);
     width: 100%;
-    height: 60vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -33,4 +34,20 @@ select {
 
 select:focus {
     outline: none;
+}
+
+#submit-button {
+    background-color: var(--main-green);
+    color: white;
+    border: none;
+    margin: 60px 0;
+    padding: 17px 35px;
+    border-radius: 30px;
+    text-decoration: none;
+    font-weight: 700;
+    transition: .3s;
+}
+
+#submit-button:hover {
+    background-color: var(--main-green-hover);
 }
