--- a/client/src/styles/Graph.css
+++ b/client/src/styles/Graph.css
@@ -4,3 +4,11 @@
     justify-content: center;
     margin-top: 100px;
 }
+
+.tooltip {
+    position: absolute;
+    background-color: white;
+    border: 1px black solid;
+    border-radius: 5px;
+    padding: 10px;
+}
