--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,16 @@
+:root {
+    --main-pink: #EFD2D2;
+    --main-light-gray: #E0E0E0;
+    --main-dark-grey: #181818;
+    --main-green: #1db954;
+    --main-green-hover: #1ED760;
+    --main-text-color: #FFFFFF;
+}
+
 * {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
+    color: var(--main-text-color);
+    background-color: var(--main-dark-grey);
 }
