--- a/client/src/styles/Mood.css
+++ b/client/src/styles/Mood.css
@@ -1,11 +1,4 @@
-:root {
-    --main-pink: #EFD2d2;
-    --main-green: #1db954;
-    --main-green-hover: #1ED760;
-}
-
 #mood-container {
-    background: var(--main-pink);
     width: 100%;
     height: 100vh;
     display: flex;
@@ -26,10 +19,10 @@
 select {
     appearance: none;
     border: none;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid var(--main-text-color);
     font-size: 30px;
     margin: 0 10px;
-    background-color: var(--main-pink);
+    background-color: var(--main-dark-grey);
 }
 
 select:focus {
@@ -38,7 +31,6 @@ select:focus {
 
 #submit-button {
     background-color: var(--main-green);
-    color: white;
     border: none;
     margin: 60px 0;
     padding: 17px 35px;
