final change to mood page (hopefully)

--- a/client/src/styles/Mood.css
+++ b/client/src/styles/Mood.css
@@ -14,6 +14,10 @@
 
 #mood-prompt {
     font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 select {
