--- a/client/src/styles/Graph.css
+++ b/client/src/styles/Graph.css
@@ -2,7 +2,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 100px;
+    margin-top: 75px;
+}
+
+#tooltip-header {
+    font-size: 1.1em;
+    font-weight: 500;
 }
 
 .tooltip {
@@ -11,4 +16,9 @@
     border: 1px black solid;
     border-radius: 5px;
     padding: 10px;
+}
+
+.tooltip * {
+    background-color: white;
+    color: black;
 }
