--- a/client/src/styles/RecommendationList.css
+++ b/client/src/styles/RecommendationList.css
@@ -10,6 +10,12 @@
     text-align: center;
     margin: 60px 0;
     color: white;
+    font-weight: 600;
+}
+
+#recommendations-intro #small-text {
+    font-size: 20px;
+    font-weight: 400;
 }
 
 #recommendations {
@@ -71,6 +77,7 @@
     padding: 17px 35px;
     border-radius: 30px;
     text-decoration: none;
+    letter-spacing: 1px;
     font-weight: 700;
     transition: .3s;
     border: none;
