--- a/client/src/styles/RecommendationList.css
+++ b/client/src/styles/RecommendationList.css
@@ -27,27 +27,37 @@
     margin: auto;
 }
 
-.song {
-    list-style: none;
-    display: flex;
-    margin: 0 0 30px 0;
-    border-radius: 5px;
-    transition: .3s;
-}
-
-#recommendations * {
+.outer-container {
     background-color: white;
 }
 
-.song:hover {
+a {
+    text-decoration: none;
+}
+
+.song {
+    list-style: none;
+    margin: 0 0 30px 0;
+    padding: 0;
+    border-radius: 5px;
+    transition: .3s;
+    display: flex;
+    background-color: white;
+}
+
+#recommendations-container #recommendations .song *:hover {
     background-color: var(--main-light-gray);
     transition: .3s;
 }
 
 .song .song-cover {
     width: 100px;
+    min-width: 100px;
+    height: 100px;
+    min-height: 100px;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
+    background-color: transparent;
 }
 
 .song .song-info {
@@ -55,19 +65,23 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    margin-left: 15px;
+    padding-left: 15px;
     overflow: hidden;
     text-overflow: ellipsis;
     border-radius: 5px;
+    background-color: transparent;
 }
 
 .song .song-info .song-title {
     font-size: 20px;
     font-weight: 600;
+    background-color: transparent;
+    text-decoration: none;
 }
 
 .song .song-info .song-artist {
     font-size: 15px;
+    background-color: transparent;
 }
 
 #reset-button {
