--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 :root {
     --main-pink: #EFD2D2;
     --main-light-gray: #E0E0E0;
+    --main-grey: #505050;
     --main-dark-grey: #181818;
     --main-green: #1db954;
     --main-green-hover: #1ED760;
