--- a/client/src/styles/Analyze.css
+++ b/client/src/styles/Analyze.css
@@ -45,6 +45,7 @@
     text-decoration: none;
     font-weight: 700;
     transition: .3s;
+    cursor: default;
 }
 
 #recommend-button:hover {
@@ -62,6 +63,7 @@
     transition: .3s;
     font-size: 0.8em;
     border: 2px solid white;
+    cursor: default;
 }
 
 #back-button:hover {
