--- a/client/src/styles/RecommendationList.css
+++ b/client/src/styles/RecommendationList.css
@@ -37,7 +37,7 @@ a {
 
 .song {
     list-style: none;
-    margin: 0 0 30px 0;
+    margin: 0 10px 30px 10px;
     padding: 0;
     border-radius: 5px;
     transition: .3s;
@@ -75,13 +75,20 @@ a {
 .song .song-info .song-title {
     font-size: 20px;
     font-weight: 600;
+    width: 95%;
     background-color: transparent;
     text-decoration: none;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .song .song-info .song-artist {
     font-size: 15px;
     background-color: transparent;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 #reset-button {
